--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -231,9 +231,6 @@ header, main, footer {
     justify-content: space-between;
     align-items: center;
     border-radius: 5px 5px 0 0;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
   }
   header #logo.mobile {
     z-index: 50;
@@ -247,152 +244,35 @@ header, main, footer {
   header #logo.desktop {
     display: none;
   }
-  header .menu #mobile .container {
-    /* Toggle State part */
-    /* MENU Text part */
+  header .menu {
+    height: inherit;
+    background-color: red;
   }
-  header .menu #mobile .container .main-nav {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    text-align: center;
-    background: #0c1525;
-    opacity: 0;
-    z-index: -1;
-    visibility: hidden;
-    transition: all 0.375s;
-  }
-  header .menu #mobile .container .main-nav.is-open {
-    opacity: 1;
-    z-index: 20;
-    visibility: visible;
-  }
-  header .menu #mobile .container .main-nav::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: -15px;
-    background: #15537C;
-    transform-origin: 0 0;
-    transform: skew(-14deg) translateX(-120%);
-    transition: all 0.275s 0.1s;
-  }
-  header .menu #mobile .container .main-nav.is-open::before {
-    transform: skew(-14deg) translateX(0);
-  }
-  header .menu #mobile .container .main-nav ul {
-    display: inline-flex;
+  header .menu #mobile {
+    width: inherit;
+    height: inherit;
+    display: flex;
     flex-direction: column;
-    height: 93%;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
-    transform: translateX(-18%) skew(-16deg);
+    padding-left: 2px;
+    padding-right: 2px;
   }
-  header .menu #mobile .container .main-nav li {
-    display: block;
-    margin: 0.5rem 0;
-    text-align: right;
-    transform: skew(16deg);
-  }
-  header .menu #mobile .container .main-nav a {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  header .menu #mobile .container .main-nav.is-open a {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  header .menu #mobile .container .main-nav li:nth-child(1) a {
-    transition: all 275ms 175ms;
-  }
-  header .menu #mobile .container .main-nav li:nth-child(2) a {
-    transition: all 275ms 225ms;
-  }
-  header .menu #mobile .container .main-nav li:nth-child(3) a {
-    transition: all 275ms 275ms;
-  }
-  header .menu #mobile .container .main-nav li:nth-child(4) a {
-    transition: all 275ms 325ms;
-  }
-  header .menu #mobile .container .main-nav li:nth-child(5) a {
-    transition: all 275ms 375ms;
-  }
-  header .menu #mobile .container .main-nav ul,
-  header .menu #mobile .container .main-nav li {
-    list-style: none;
-    padding: 0;
-  }
-  header .menu #mobile .container .main-nav a {
-    display: block;
-    padding: 12px 0;
-    color: #2899E5;
-    font-size: 1.4em;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  header .menu #mobile .container .main-nav a.active {
-    border-bottom: 2px solid #2899E5;
-  }
-  header .menu #mobile .container .open-main-nav {
-    position: absolute;
-    top: 15px;
-    padding-top: 20px;
-    right: 15px;
-    z-index: 1000;
-    background: none;
-    border: 0;
-    cursor: pointer;
-  }
-  header .menu #mobile .container .open-main-nav:focus {
-    outline: none;
-  }
-  header .menu #mobile .container .burger {
+  header .menu #mobile .menu-burger,
+  header .menu #mobile .menu-burger::before,
+  header .menu #mobile .menu-burger::after {
     position: relative;
-    display: block;
-    width: 28px;
-    height: 4px;
-    margin: 0 auto;
-    background: #2899E5;
-    transform: skew(5deg);
-    transition: all 0.275s;
+    width: 100%;
+    height: 6px;
+    background-color: #616161;
   }
-  header .menu #mobile .container .burger:after,
-  header .menu #mobile .container .burger:before {
+  header .menu #mobile .menu-burger::before {
     content: "";
-    display: block;
-    height: 100%;
-    background: #2899E5;
-    transition: all 0.275s;
+    top: -8px;
   }
-  header .menu #mobile .container .burger:after {
-    transform: translateY(-12px) translateX(-2px) skew(-20deg);
-  }
-  header .menu #mobile .container .burger:before {
-    transform: translateY(-16px) skew(-10deg);
-  }
-  header .menu #mobile .container .is-open .burger {
-    transform: skew(5deg) translateY(-8px) rotate(-45deg);
-  }
-  header .menu #mobile .container .is-open .burger:before {
-    transform: translateY(0px) skew(-10deg) rotate(75deg);
-  }
-  header .menu #mobile .container .is-open .burger:after {
-    transform: translateY(-12px) translateX(10px) skew(-20deg);
-    opacity: 0;
-  }
-  header .menu #mobile .container .burger-text {
-    display: block;
-    font-size: 0.675rem;
-    letter-spacing: 0.05em;
-    margin-top: 0.5em;
-    text-transform: uppercase;
-    font-weight: 500;
-    text-align: center;
-    color: #2899E5;
+  header .menu #mobile .menu-burger::after {
+    content: "";
+    top: 8px;
   }
   header .menu #desktop {
     display: none;
