--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -29,9 +29,9 @@ header, main, footer {
         justify-content: space-between;
         align-items: center;
         border-radius: 5px 5px 0 0;
-        position: sticky;
-        top: 0;
-        z-index: 1000;
+        // position: sticky;
+        // top: 0;
+        // z-index: 1000;
     
         #logo.mobile {
             z-index: 50;
@@ -47,168 +47,201 @@ header, main, footer {
             display: none;
         }
 
-        .menu #mobile .container {
-            .main-nav {
-                position: absolute;
-                top: 0;
-                right: 0;
-                left: 0;
-                bottom: 0;
-                text-align: center;
-                background: $background-secondary;
-                opacity: 0;
-                z-index: -1;
-                visibility: hidden;
-                transition: all .375s;
-            }
-
-            .main-nav.is-open {
-                opacity: 1;
-                z-index: 20;
-                visibility: visible;
-            }
-
-            .main-nav::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: -15px;
-                background: $background-blue-dark;
-                transform-origin: 0 0;
-                transform: skew(-14deg) translateX(-120%);
-                transition: all .275s .1s;
-            }
-
-            .main-nav.is-open::before {
-                transform: skew(-14deg) translateX(0);
-            }
-
-            .main-nav ul {
-                display: inline-flex;
+        .menu {
+            height: inherit;
+            background-color: red;
+            #mobile {
+                width: inherit;
+                height: inherit;
+                display: flex;
                 flex-direction: column;
-                height: 93%;
-                align-items: flex-end;
+                align-items: center;
                 justify-content: center;
-                transform: translateX(-18%) skew(-16deg);
-            }
+                padding-left: 2px;
+                padding-right: 2px;
 
-            .main-nav li {
-                display: block;
-                margin: .5rem 0;
-                text-align: right;
-                transform: skew(16deg);
-            }
+                .menu-burger,
+                .menu-burger::before,
+                .menu-burger::after {
+                    position: relative;
+                    width: 100%;
+                    height: 6px;
+                    background-color: #616161;
+                }
 
-            .main-nav a {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
+                .menu-burger::before {
+                    content: '';
+                    top: -8px;
+                }
 
-            .main-nav.is-open a {
-                opacity: 1;
-                transform: translateY(0);
+                .menu-burger::after {
+                    content: '';
+                    top: 8px;
+                }
             }
-            .main-nav li:nth-child(1) a {
-                transition: all 275ms 175ms
-            }
-            .main-nav li:nth-child(2) a {
-                transition: all 275ms 225ms
-            }
-            .main-nav li:nth-child(3) a {
-                transition: all 275ms 275ms
-            }
-            .main-nav li:nth-child(4) a {
-                transition: all 275ms 325ms
-            }
-            .main-nav li:nth-child(5) a {
-                transition: all 275ms 375ms
-            }
-            .main-nav ul,
-            .main-nav li {
-                list-style: none;
-                padding: 0;
-            }
-            .main-nav a {
-                display: block;
-                padding: 12px 0;
-                color: $background-blue-light;
-                font-size: 1.4em;
-                text-decoration: none;
-                font-weight: bold;
-            }
-            .main-nav a.active {
-                border-bottom: 2px solid $background-blue-light;
-            }
+            // #mobile .container {
+            //     .main-nav {
+            //         position: absolute;
+            //         top: 0;
+            //         right: 0;
+            //         left: 0;
+            //         bottom: 0;
+            //         text-align: center;
+            //         background: $background-secondary;
+            //         opacity: 0;
+            //         z-index: -1;
+            //         visibility: hidden;
+            //         transition: all .375s;
+            //     }
 
-            .open-main-nav {
-                position: absolute;
-                top: 15px;
-                padding-top: 20px;
-                right: 15px;
-                z-index: 1000;
-                background: none;
-                border: 0;
-                cursor: pointer;
-            }
-            .open-main-nav:focus {
-                outline: none;
-            }
-            .burger {
-                position: relative;
-                display: block;
-                width: 28px;
-                height: 4px;
-                margin: 0 auto;
-                background: $background-blue-light;
-                transform: skew(5deg);
-                transition: all .275s;
-            }
+            //     .main-nav.is-open {
+            //         opacity: 1;
+            //         z-index: 20;
+            //         visibility: visible;
+            //     }
 
-            .burger:after,
-            .burger:before {
-                content: '';
-                display: block;
-                height: 100%;
-                background: $background-blue-light;
-                transition: all .275s;
-            }
+            //     .main-nav::before {
+            //         content: '';
+            //         position: absolute;
+            //         top: 0;
+            //         bottom: 0;
+            //         left: 0;
+            //         right: -15px;
+            //         background: $background-blue-dark;
+            //         transform-origin: 0 0;
+            //         transform: skew(-14deg) translateX(-120%);
+            //         transition: all .275s .1s;
+            //     }
 
-            .burger:after {
-                transform: translateY(-12px) translateX(-2px) skew(-20deg);
-            }
+            //     .main-nav.is-open::before {
+            //         transform: skew(-14deg) translateX(0);
+            //     }
 
-            .burger:before {
-                transform: translateY(-16px) skew(-10deg);
-            }
+            //     .main-nav ul {
+            //         display: inline-flex;
+            //         flex-direction: column;
+            //         height: 93%;
+            //         align-items: flex-end;
+            //         justify-content: center;
+            //         transform: translateX(-18%) skew(-16deg);
+            //     }
 
-            /* Toggle State part */
-            .is-open .burger {
-                transform: skew(5deg) translateY(-8px) rotate(-45deg);
-            }
+            //     .main-nav li {
+            //         display: block;
+            //         margin: .5rem 0;
+            //         text-align: right;
+            //         transform: skew(16deg);
+            //     }
 
-            .is-open .burger:before {
-                transform: translateY(0px) skew(-10deg) rotate(75deg);
-            }
+            //     .main-nav a {
+            //         opacity: 0;
+            //         transform: translateY(-10px);
+            //     }
 
-            .is-open .burger:after {
-                transform: translateY(-12px) translateX(10px) skew(-20deg);
-                opacity: 0;
-            }
+            //     .main-nav.is-open a {
+            //         opacity: 1;
+            //         transform: translateY(0);
+            //     }
+            //     .main-nav li:nth-child(1) a {
+            //         transition: all 275ms 175ms
+            //     }
+            //     .main-nav li:nth-child(2) a {
+            //         transition: all 275ms 225ms
+            //     }
+            //     .main-nav li:nth-child(3) a {
+            //         transition: all 275ms 275ms
+            //     }
+            //     .main-nav li:nth-child(4) a {
+            //         transition: all 275ms 325ms
+            //     }
+            //     .main-nav li:nth-child(5) a {
+            //         transition: all 275ms 375ms
+            //     }
+            //     .main-nav ul,
+            //     .main-nav li {
+            //         list-style: none;
+            //         padding: 0;
+            //     }
+            //     .main-nav a {
+            //         display: block;
+            //         padding: 12px 0;
+            //         color: $background-blue-light;
+            //         font-size: 1.4em;
+            //         text-decoration: none;
+            //         font-weight: bold;
+            //     }
+            //     .main-nav a.active {
+            //         border-bottom: 2px solid $background-blue-light;
+            //     }
 
-            /* MENU Text part */
+            //     .open-main-nav {
+            //         position: absolute;
+            //         top: 15px;
+            //         padding-top: 20px;
+            //         right: 15px;
+            //         z-index: 1000;
+            //         background: none;
+            //         border: 0;
+            //         cursor: pointer;
+            //     }
+            //     .open-main-nav:focus {
+            //         outline: none;
+            //     }
+            //     .burger {
+            //         position: relative;
+            //         display: block;
+            //         width: 28px;
+            //         height: 4px;
+            //         margin: 0 auto;
+            //         background: $background-blue-light;
+            //         transform: skew(5deg);
+            //         transition: all .275s;
+            //     }
 
-            .burger-text {
-                display: block;
-                font-size: .675rem;
-                letter-spacing: .05em;
-                margin-top: .5em;
-                text-transform: uppercase;
-                font-weight: 500;
-                text-align: center;
-                color: $background-blue-light;
-            }
+            //     .burger:after,
+            //     .burger:before {
+            //         content: '';
+            //         display: block;
+            //         height: 100%;
+            //         background: $background-blue-light;
+            //         transition: all .275s;
+            //     }
+
+            //     .burger:after {
+            //         transform: translateY(-12px) translateX(-2px) skew(-20deg);
+            //     }
+
+            //     .burger:before {
+            //         transform: translateY(-16px) skew(-10deg);
+            //     }
+
+            //     /* Toggle State part */
+            //     .is-open .burger {
+            //         transform: skew(5deg) translateY(-8px) rotate(-45deg);
+            //     }
+
+            //     .is-open .burger:before {
+            //         transform: translateY(0px) skew(-10deg) rotate(75deg);
+            //     }
+
+            //     .is-open .burger:after {
+            //         transform: translateY(-12px) translateX(10px) skew(-20deg);
+            //         opacity: 0;
+            //     }
+
+            //     /* MENU Text part */
+
+            //     .burger-text {
+            //         display: block;
+            //         font-size: .675rem;
+            //         letter-spacing: .05em;
+            //         margin-top: .5em;
+            //         text-transform: uppercase;
+            //         font-weight: 500;
+            //         text-align: center;
+            //         color: $background-blue-light;
+            //     }
+            // }
         }
 
         .menu #desktop {
